--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,10 @@ jobs:
         run: make install
       - name: Format
         run: make format
+      - name: Create Directories
+        run: | 
+          mkdir -p Results
+          mkdir -p Model
       - name: Train
         run: make train
       - name: Evaluation
@@ -24,7 +28,3 @@ jobs:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: make eval
       - name: Update Branch
-        env:
-          NAME: ${{ secrets.USER_NAME }}
-          EMAIL: ${{ secrets.USER_EMAIL }}
-        run: make update-branch USER_NAME=$NAME USER_EMAIL=$EMAIL
