--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,10 @@ jobs:
         run: make install
       - name: Format
         run: make format
-      - name: Create Directories
+      - name: Create Result Directorie
         run: mkdir -p Results 
+      - name: Create Model Directorie
+        run: mkdir -p Model 
       - name: Train
         run: make train
       - name: Evaluation
